# src2md

./: .gitignore  .release.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  src2md.ignore
.github/workflows/: ci.yml  release.yml
src/: cli.rs  extractor.rs  filewalker.rs  git.rs  lib.rs  main.rs  mdbook.rs  tests.rs  utils.rs  writer.rs
src/tests/: smoke_test.rs
tests/: smoke_test.rs
