[package]
name = "src2md"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
authors = ["Matias Hiltunen <https://github.com/MatiasHiltunen>"]
description = "Turn source code into a Markdown document with syntax highlighting, or extract it back."
license = "MIT"
repository = "https://github.com/MatiasHiltunen/src2md"
readme = "README.md"
keywords = ["markdown", "cli", "code", "extract", "docs"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
documentation = "https://docs.rs/src2md"
homepage = "https://github.com/MatiasHiltunen/src2md"

[features]
default = ["restore", "git", "mdbook"]
restore = ["dep:regex", "dep:once_cell"]
git = ["dep:git2", "dep:tempfile"]
mdbook = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
ignore = "0.4.25"
content_inspector = "0.2"
memmap2 = "0.9.9"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
chrono = "0.4.42"

# Optional dependencies for restore feature
regex = { version = "1.12.2", optional = true }
once_cell = { version = "1.21", optional = true }

# Optional dependencies for git feature
git2 = { version = "0.20", optional = true }
tempfile = { version = "3.24.0", optional = true }

[lib]
name = "src2md"
path = "src/lib.rs"

[[bin]]
name = "src2md"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"
